--- a/about.css
+++ b/about.css
@@ -27,3 +27,10 @@ a{
 a:hover{
     color: greenyellow;
 }
+/* .popup{
+    background-color:rgb(156, 156, 255) ;
+    width: 50px;
+    height: 50px;
+    
+    
+} */
