--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ a:hover {
 h2 {
     font-size: 3.8rem;
     margin-bottom: 0;
+    margin-top: -48;
 }
 
 p {
@@ -93,7 +94,7 @@ p {
 }
 
 .left-1 {
-    width: 300px;
+    font-size: 2.3rem;
 }
 
 img {
@@ -171,4 +172,24 @@ hr {
     text-align: justify;
     margin: 20px 60px;
     font-size: 1rem;
+}
+#element{
+font-weight: 1000;
+}
+#bolder{
+font-weight: 1000;
+}
+.copyright{
+    cursor: pointer;
+    color: rgb(46, 46, 184) ;
+    font-weight: 1000;
+}
+footer{
+    background-color: rgb(156, 156, 255);
+    height: 40px;
+}
+
+footer p{
+    align-items: center;
+    justify-content: center;
 }
