--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+::selection {
+    color: rgb(0, 217, 255);
+    background-color: rgb(255, 255, 255);
+}
+
 header {
     padding-top: 0%;
     margin-top: 0%;
@@ -36,6 +41,7 @@ ul {
 }
 
 .left {
+    cursor: pointer;
     text-transform: uppercase;
     font-weight: bolder;
     font-size: 2rem;
@@ -68,12 +74,14 @@ a:hover {
 }
 
 .btn-2:hover {
-    color: white;
-    background: linear-gradient(to top left,#285AEB, #d6249f, yellow 100%, #fd5949, #d6249f, #285AEB);
+
+    border-color: rgb(255, 10, 10);
+    color: rgb(255, 10, 10);
 
 }
 
 .btn:hover {
+    transform: scale(1.3);
     background-color: transparent;
     border-color: rgb(255, 10, 10);
     color: rgb(255, 255, 255);
@@ -111,6 +119,10 @@ img {
 span {
     color: rgb(156, 156, 255);
     text-transform: capitalize;
+}
+
+#our-clint {
+    margin-bottom: 80px;
 }
 
 /* new section start */
@@ -206,13 +218,97 @@ footer p {
     align-items: center;
     justify-content: center;
 }
-#heart{
+
+#heart {
     color: red;
 }
-#impo{
-color: rgb(46, 46, 184);
-font-weight: bolder ;
+
+#impo {
+    color: rgb(46, 46, 184);
+    font-weight: bolder;
 }
-#impo:hover{
+
+#impo:hover {
     color: #d6249f;
+}
+
+
+
+/* our clint section */
+
+.main-box {
+
+    display: flex;
+    justify-content: space-between;
+    margin: 0 60px;
+}
+
+.main-box h5 {
+    text-align: center;
+    text-transform: capitalize;
+    color: rgb(156, 156, 255);
+    margin: 0 0 15px;
+    font-size: 30px;
+}
+
+.main-box p {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+.box-1,
+.box-2,
+.box-3 {
+    border-radius: 25px;
+    background-color: rgb(22, 22, 97);
+    width: 30%;
+    height: 360px;
+}
+
+.box-1 h5 {
+    padding: 20px 0 0 0px;
+}
+
+.box-1 p {
+    padding: 0 30px 0 30px;
+}
+
+.box-2 h5 {
+    padding: 20px 0 0 0px;
+}
+
+.box-2 p {
+    padding: 0 30px 0 30px;
+}
+
+.box-3 h5 {
+    padding: 20px 0 0 0px;
+}
+
+.box-3 p {
+    padding: 0 30px 0 30px;
+}
+
+/* portfolio section  */
+
+.hero-2{
+    display: flex;
+    justify-content: space-between;
+}
+ 
+.align {
+    width: 92%px;
+    /* background-color: #d6249f; */
+    height: 600px;
+
+}
+
+.align p {
+    text-align: left;
+}
+.align h3{
+    margin-bottom: 50px 0px 10px 0px;
+    font-size: 4rem;
 }
